# echo

./: .env.example  .gitignore  BUILD.md  DEVELOPMENT_NOTES.md  FEATURES_VERIFIED.md  INSTALL_GUIDE.md  LAUNCH_FIXES.md  NEW_FEATURES.md  QUICKSTART.md  QUICK_SETUP.md  README.md  READY_TO_RUN.md  SECURITY_IMPROVEMENTS.md  SESSION_SUMMARY.md  SETUP_COMPLETE.md  TESTING.md  jest.config.js  package-lock.json  package.json  setup.ps1  setup.sh
electron-app/: package.json  tsconfig.json  tsconfig.main.json
electron-app/main/: index.ts
electron-app/main/ipc/: capture.ts  context.ts  health.ts  llm.ts  settings.ts
electron-app/preload/: index.ts
electron-app/renderer/: index.html  vite.config.ts
electron-app/renderer/src/: App.tsx  app.css  i18n.ts  main.tsx
electron-app/renderer/src/components/: ControlPanel.tsx  StatusBadge.tsx
electron-app/renderer/src/pages/: ContextPage.css  ContextPage.tsx  Dashboard.tsx
python-workers/: pyproject.toml  requirements-ai.txt  requirements.txt
scripts/: create-icons.js
src/: index.html  main.js  preload.js  renderer.js
src/services/: asr.js  database.js  llm.js
tests/: README.md  setup.js  simple.test.js
tests/utils/: mocks.js
